--- a/package.json
+++ b/package.json
@@ -7,21 +7,28 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
-    "typeorm": "typeorm-ts-node-commonjs"
+    "typeorm": "typeorm-ts-node-commonjs",
+    "buid": "tsc",
+    "start": "node dist/server.js"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.5",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
+    "@types/uuid": "^9.0.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1",
+    "yup": "0.32.11"
   }
 }
